embed images directly instead of using them as background images, allowing for smaller and bigger cover images, no longer cropping the shit out of those images

--- a/theme/static/css/webkid.css
+++ b/theme/static/css/webkid.css
@@ -54,8 +54,7 @@ body * {
   font-weight: bold;
   font-size: 30px;
   text-decoration: none;
-  max-width: 1250px;
-  width: 100%;
+  width: 1250px;
   padding: 1.5rem 1.8rem;
   margin: 0 auto;
 }
@@ -121,7 +120,7 @@ body * {
 }
 
 #articles, #article {
-  width: 67%;
+  width: 800px;
   margin-right: 3%;
   float: left;
 }
@@ -140,7 +139,7 @@ body * {
 
 #articles .post .post-image {
   width: 100%;
-  height: 300px;
+  /*height: 300px;*/
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -170,7 +169,7 @@ body * {
 }
 
 #sidebar {
-  width: 30%;
+  width: 360px;
   float: left;
 }
 
